Fix more fallout from failed attempts at div/mod DFG strength reductions https://bugs.webkit.org/show_bug.cgi?id=124813

Reviewed by Geoffrey Garen.

Source/JavaScriptCore:

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compileArithMod):

LayoutTests:

* js/dfg-mod-1-int.html: Added.
* js/dfg-mod-1-int-expected.txt: Added.
* js/script-tests/dfg-mod-1-int.js: Added.
(foo):



Canonical link: https://commits.webkit.org/142987@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159736 268f45cc-cd09-0410-ab3c-d52691b4dbfc